# rust-axum-demo

./: .dockerignore  .rustfmt.toml  Cargo.toml  README.md  application.toml  skaffold.yaml  sqlx-data.json
axum-demo/: Cargo.toml  Dockerfile  README.md  skaffold.yaml
axum-demo/k8s/: axum-demo-deployment.yaml  axum-demo-service.yaml
axum-demo/k8s/cloud/: axum-demo-deployment.yaml  kustomization.yaml
axum-demo/k8s/default/: axum-demo-deployment.yaml  kustomization.yaml
axum-demo/k8s/local-cluster/: kustomization.yaml
axum-demo/src/: lib.rs  main.rs
axum-demo/src/config/: context.rs  mod.rs
axum-demo/src/controller/: mod.rs
axum-demo/src/credential_repo/: tests.rs
axum-demo/src/service/: mod.rs  tests.rs
axum-demo/src/token_repo/: mod.rs  tests.rs
axum-demo/tests/: http_tests.rs
config/: README.md  application.toml  kustomization.yaml
config/base/: application.toml  kustomization.yaml
config/local-cluster/: kustomization.yaml
migrate-db/: Cargo.toml  Dockerfile  README.md  skaffold.yaml
migrate-db/k8s/: migrate-db-job.yaml
migrate-db/k8s/cloud/: kustomization.yaml
migrate-db/k8s/default/: kustomization.yaml  migrate-db-job.yaml
migrate-db/k8s/local-cluster/: kustomization.yaml  migrate-db-job.yaml
migrate-db/migrations/: 20220428194947_new-credentials-table.down.sql  20220428194947_new-credentials-table.up.sql
migrate-db/src/: main.rs
migration/: Cargo.toml  Dockerfile  README.md  skaffold.yaml
migration/k8s/: migration-job.yaml
ops/k8s/app/: axum-demo-deployment.yaml  axum-demo-service.yaml
ops/k8s/storage/: postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml
rust-builder/: Dockerfile  README.md  skaffold.yaml
src/: lib.rs  main.rs
src/config/: app.rs  config.rs  mod.rs
src/controller/: mod.rs
src/model/: mod.rs
src/validation/: mod.rs
storage/: README.md  skaffold.yaml
storage/k8s/: postgres-deployment.yaml  postgres-service.yaml  redis-deployment copy.yaml
storage/k8s/local-cluster/: kustomization.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-service.yaml
tests/: http_tests.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs
utils/src/config/: app.rs  config.rs  db.rs  mod.rs  redis.rs
utils/src/controller/: mod.rs
utils/src/credential_repo/: mod.rs  tests.rs
utils/src/model/: error.rs  mod.rs
utils/src/service/: mod.rs  tests.rs
utils/src/token_repo/: tests.rs
utils/src/validation/: mod.rs
web/: App.toml  Cargo.toml  Dockerfile  README.md  skaffold.yaml
web/k8s/: axum-demo-deployment.yaml  axum-demo-service.yaml
web/src/: lib.rs  main.rs
web/src/config/: mod.rs
web/src/controller/: mod.rs
web/src/model/: mod.rs
web/src/validation/: mod.rs
web/tests/: http_tests.rs
