[package]
edition = "2021"
name = "axum_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.17", features = ["full"]}
tower = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
