[package]
edition = "2021"
name = "axum_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
lazy-regex = "2.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.17", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.2", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
validator = {version = "0.14", features = ["derive"]}
