[package]
edition = "2021"
name = "migrate-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-demo = {path = "../axum-demo"}
sqlx = {version = "0.5", features = ["macros", "runtime-tokio-rustls", "postgres", "migrate"]}
tokio = {version = "1.17", features = ["full"]}
tracing = "0.1"
