[package]
edition = "2021"
name = "utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
axum = "0.5"
figment = {version = "0.10", features = ["toml", "env"]}
hostname = "0.3"
hyper = {version = "0.14", features = ["full"]}
lazy-regex = "2.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["macros", "runtime-tokio-rustls", "postgres", "offline"]}
thiserror = "1.0"
tokio = {version = "1.17", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.3", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
validator = {version = "0.14", features = ["derive"]}

[dev-dependencies]
double-checked-cell-async = "2.0"
lazy_static = "1.4"
mockall = "0.11"
