[package]
edition = "2021"
name = "axum_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.17"
utils = {path = "../utils"}

[dev-dependencies]
anyhow = "1.0"
axum = "0.5"
hyper = {version = "0.14", features = ["full"]}
serde_json = "1.0"
tower = "0.4"
uuid = {version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
